# diskwrite

./: .gitignore  Makefile  README.md  meson.build
include/: getFileByteNum.h
src/cli/: main.c
src/cli/functions/: getFileByteNum.c
src/lib/: getFileByteSize.c  main.c
src/lib/include/: dw.h
